--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "mongoose": "^4.0.5",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
     "supervisor": "^0.10.0"
